# SnapNotes

./: .gitignore  BUILD-ANDROID.md  BUILD-MAC.md  BUILD-WINDOWS.md  INSTALL.md  README-BUILD.md  README.md  capacitor.config.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: build-and-release.yml  build-native.yml  deploy-pages.yml  release.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
app/: globals.css  layout.tsx  page.tsx
app/api/capture/: route.ts
app/api/notes/: route.ts
app/camera/: page.tsx
app/settings/: page.tsx
backend/: .env.example  db.js  gemini.js  package-lock.json  package.json  server.js
backend/routes/: notes.js
components/: BottomNav.tsx  LoadingSpinner.tsx  NoteCard.tsx  SubjectPill.tsx
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: Camera.jsx  NoteCard.jsx  NotesList.jsx  SubjectFilter.jsx
frontend/src/hooks/: useAutoSave.ts  useOCR.ts  (+1 more)
lib/: db.ts  gemini.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useOCR.ts
src/pages/: CameraPage.tsx  Dashboard.tsx  NoteEditor.tsx  NotesPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/store/: notesStore.ts
src/types/: index.ts
src/utils/: aiUtils.ts  exportUtils.ts  searchUtils.ts
(+42 files in other folders)
