[package]
name = "quicknotes"
version = "1.0.0"
description = "QuickNotes – a fast, lightweight desktop notes app"
authors = ["Miraziz574"]
license = "ISC"
repository = "https://github.com/Miraziz574/SnapNotes"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "fs-all",
  "dialog-all",
  "notification-all",
  "path-all",
  "os-all",
  "system-tray",
  "updater",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
